[tool.poetry]
name = "fastapi-microblog"
version = "0.1.0"
description = ""
authors = ["Владислав <vlad.slinchuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
websockets = "^10.3"
SQLAlchemy = "^1.4.39"
psycopg = "^3.0.15"
alembic = "^1.8.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
